[package]
name = "xcpclient"
version = "2.0.0"
edition = "2024"
resolver = "2"
authors = ["RainerZ"]
description = "Simple XCP test client and utilities"
readme = "README.md"
keywords = ["XCP","ASAM","CANape","A2L"]
license = "MIT"
homepage = "https://vector.com"  
repository = "https://github.com/vectorgrp/XCPlite"
categories = ["measurement and calibration"] 

 # more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.28"
env_logger = "0.11.8"
clap = { version = "4.5.52", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.5"
byteorder = "1.5.0"
bytes = "1.11.0"
regex = "1.12.2"
chrono = "0.4.42"
parking_lot = "0.12.5"
tokio = { version = "1.48", features = ["full"] }
ihex = "3.0"

# ELF/DWARF Debug info parsing dependencies
gimli = "0.28"
object = "0.36"
pdb2 = "0.10"
memmap2 = "0.9"
indexmap = "2.12"
cpp_demangle = "0.4"

# A2l registry and A2L reader/writer
a2lfile = "3.3.0"

# xcp-lite on Github https://github.com/RainerZ/xcp-lite.git
xcp_lite = { git = "https://github.com/RainerZ/xcp-lite.git", branch = "V2.0.0", features = ["a2l_reader"] }

[lints.rust]
dead_code = "allow"
unused_variables = "allow"

[build-dependencies]





